# protoactor-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
protoactor/: Cargo.toml  build.rs
protoactor-cluster/: Cargo.toml
protoactor-derive/: Cargo.toml
protoactor-derive/src/: lib.rs
protoactor-derive/tests/: test_macros.rs
protoactor-persistence/: Cargo.toml
protoactor-remote/: Cargo.toml
protoactor/src/: actor.rs  actor_process.rs  actor_ref.rs  actor_system.rs  config.rs  context.rs  lib.rs  mailbox.rs  message.rs  props.rs  proto.proto  proto.rs  utils.rs
protoactor/src/actor/: actor_cell.rs  actor_process.rs  actor_ref.rs  actor_system.rs  context.rs  handler.rs  message.rs
protoactor/src/actor_system/: inner.rs  root_context.rs
protoactor/src/context/: root.rs
protoactor/src/proto/: mod.rs  pid.rs
samples/: Cargo.toml
samples/src/: green_threads.rs  main.rs  ping_pong.rs
