[package]
name = "protoactor-cluster"
version = "0.1.0"
edition = "2021"
authors = ["Milan Jarić"]
description = "ProtoActor implementation in Rust"
repository = "https://github.com/0xPANSE/protoactor-rs"
license = "Apache-2.0"
license-file = "../LICENSE"
readme = "../README.md"
keywords = ["actor", "actors", "actor-model", "actor-system", "actor-framework", "distributed", "distributed-systems"]
categories = ["concurrency", "asynchronous", "network-programming", "actor-model", "actor-framework", "distributed-systems"]
documentation = "https://docs.rs/protoactor-cluster"
[dependencies]
