[package]
name = "protoactor-persistence"
version = "0.1.0"
edition = "2021"
authors = ["Milan Jarić"]
description = "ProtoActor implementation in Rust"
repository = "https://github.com/0xPANSE/protoactor-rs"
license-file = "../LICENSE"
readme = "../README.md"
keywords = ["protoactor", "actor", "actor-system", "distributed-systems"]
categories = ["concurrency", "asynchronous", "network-programming"]
documentation = "https://docs.rs/protoactor-persistence"

[dependencies]
