[package]
name = "protoactor"
version = "0.1.0"
edition = "2021"
authors = ["Milan Jarić"]
description = "ProtoActor implementation in Rust"
repository = "https://github.com/0xPANSE/protoactor-rs"
license = "Apache-2.0"
license-file = "../LICENSE"
readme = "../README.md"
keywords = ["actor", "actor-system", "distributed"]
categories = ["concurrency", "asynchronous", "network-programming"]
documentation = "https://docs.rs/protoactor"


[dependencies]
futures = "0.3"
protoactor-remote = { version="0.1.0", optional = true }
protoactor-cluster = { version="0.1.0", optional = true }
protoactor-persistence = { version="0.1.0", optional = true }
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
remote = ["protoactor-remote"]
cluster = ["protoactor-remote", "protoactor-cluster"]
persistence = ["protoactor-persistence"]