[package]
name = "samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protoactor = { path = "../protoactor", version = "0.1.0" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.17"
log = "0.4.14"
env_logger = "0.10.0"

[profile.release]
# Tell `rustc` to optimize for best performance instead of smallest code size.
opt-level = 3
