[package]
name = "samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pingpong"
path = "src/main.rs"

[[bin]]
name = "green_threads"
path = "src/green_threads.rs"


[dependencies]
protoactor = { path = "../protoactor", version = "0.1.0" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.17"
log = "0.4.14"
env_logger = "0.10.0"

[rust]
debuginfo-level = 1

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]